--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
  "version": "0.0.0",
  "type": "module",
  "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "build:dev": "vite build --mode development",
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
   "lint": "eslint .",
-  "preview": "vite preview",
   "test": "vitest run",
   "test:watch": "vitest"
  },
@@ -51,6 +50,7 @@
   "framer-motion": "^12.33.0",
   "input-otp": "^1.4.2",
   "lucide-react": "^0.462.0",
+  "next": "^15.5.0",
   "next-themes": "^0.3.0",
   "react": "^18.3.1",
   "react-day-picker": "^8.10.1",
@@ -58,7 +58,6 @@
   "react-hook-form": "^7.61.1",
   "react-phone-number-input": "^3.4.14",
   "react-resizable-panels": "^2.1.9",
-  "react-router-dom": "^6.30.1",
   "recharts": "^2.15.4",
   "sonner": "^1.7.4",
   "tailwind-merge": "^2.6.0",
@@ -68,6 +67,7 @@
  },
  "devDependencies": {
   "@eslint/js": "^9.32.0",
+  "@next/eslint-plugin-next": "^16.1.6",
   "@tailwindcss/typography": "^0.5.16",
   "@types/node": "^22.16.5",
   "@types/react": "^18.3.23",
