--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
  "name": "codebay",
- "private": true,
- "version": "0.0.0",
+ "private": false,
+ "version": "1.0.0",
  "type": "module",
+ "license": "UNLICENSED",
  "scripts": {
   "dev": "next dev",
   "build": "next build",
