Update environment configurations and refactor URL handling across applications
- Enhanced .env.example files for local development with cross-app URL settings.
- Refactored layout and page components in the blog and community apps to utilize centralized URL imports from `site-urls`.
- Updated redirect links in various components to use dynamic URLs for improved maintainability.
- Improved metadata handling in layout files to ensure consistent site URLs across applications.

--- a/apps/codebay/.env.example
+++ b/apps/codebay/.env.example
@@ -4,3 +4,9 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 
 # OpenAI API Key is set as a secret in Supabase:
 # Run: supabase secrets set OPENAI_API_KEY=your_openai_api_key
+
+# Cross-app URLs (optional). For local dev, set so Blog/Community links stay on localhost:
+# NEXT_PUBLIC_SITE_URL=http://localhost:3000
+# NEXT_PUBLIC_BLOG_URL=http://localhost:3001
+# NEXT_PUBLIC_COMMUNITY_URL=http://localhost:3002
+# Production defaults: https://codebay.dev, https://codingbay.blog, https://codingbay.community
