--- a/apps/blog/.env.example
+++ b/apps/blog/.env.example
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_SITE_URL=https://codingbay.blog
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# For local dev (links to main site in schema): NEXT_PUBLIC_MAIN_URL=http://localhost:3000
