--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,8 +8,13 @@
     "./styles.css": "./src/styles.css"
   },
   "peerDependencies": {
+    "next": ">=14.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.23",
