Integrate @codebay/theme into blog and community apps
- Added @codebay/theme as a dependency in package.json files for blog and community applications.
- Updated Tailwind CSS configurations to use the codebayTailwindPreset for consistent theming.
- Refactored layout and component files to utilize the CodeBayThemeProvider and SurfaceCard components for improved UI consistency.
- Removed redundant CSS variables and styles, leveraging the theme package for design tokens.
- Enhanced global styles by importing tokens from @codebay/theme, streamlining the styling process across applications.

--- a/apps/codebay/package.json
+++ b/apps/codebay/package.json
@@ -43,6 +43,7 @@
   "@radix-ui/react-tooltip": "^1.2.7",
   "@supabase/ssr": "^0.8.0",
   "@supabase/supabase-js": "^2.98.0",
+  "@codebay/theme": "file:../../packages/theme",
   "@tanstack/react-query": "^5.83.0",
   "@codebay/ui": "file:../../packages/ui",
   "class-variance-authority": "^0.7.1",
