--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -9,6 +9,7 @@
     "start": "next start --port 3001"
   },
   "dependencies": {
+    "@codebay/theme": "file:../../packages/theme",
     "@codebay/ui": "file:../../packages/ui",
     "@supabase/supabase-js": "^2.98.0",
     "next": "^15.5.0",
