--- a/apps/community/package.json
+++ b/apps/community/package.json
@@ -9,6 +9,7 @@
     "start": "next start --port 3002"
   },
   "dependencies": {
+    "@codebay/theme": "file:../../packages/theme",
     "@codebay/ui": "file:../../packages/ui",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.98.0",
